WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244680
REGRESSION(
253383@main
): Build broken with ENABLE(VIDEO) disabled
https://bugs.webkit.org/show_bug.cgi?id=244680
Summary
REGRESSION(253383@main): Build broken with ENABLE(VIDEO) disabled
Adrian Perez
Reported
2022-09-01 11:27:04 PDT
In file included from /home/aperez/buildroot/output-rpi4test/build/wpewebkit-custom/WebCore/DerivedSources/unified-sources/UnifiedSource-be65d27a-10.cpp:4: /home/aperez/buildroot/output-rpi4test/build/wpewebkit-custom/Source/WebCore/dom/FragmentDirectiveRangeFinder.cpp: In function ‘bool WebCore::FragmentDirectiveRangeFinder::isSearchInvisible(const WebCore::Node&)’: /home/aperez/buildroot/output-rpi4test/build/wpewebkit-custom/Source/WebCore/dom/FragmentDirectiveRangeFinder.cpp:70:15: error: ‘HTMLAudioElement’ was not declared in this scope; did you mean ‘HTMLVideoElement’? 70 | || is<HTMLAudioElement>(node)) | ^~~~~~~~~~~~~~~~ | HTMLVideoElement /home/aperez/buildroot/output-rpi4test/build/wpewebkit-custom/Source/WebCore/dom/FragmentDirectiveRangeFinder.cpp:70:37: error: no matching function for call to ‘is<<expression error
> >(const WebCore::Node&)’
70 | || is<HTMLAudioElement>(node)) | ^
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2022-09-01 12:32:39 PDT
Also: /home/aperez/buildroot/output-rpi4test/build/wpewebkit-custom/Source/WebCore/page/ContextMenuController.cpp:1291:95: error: ‘contextMenuItemTagShowMediaStats’ was not declared in this scope; did you mean ‘ContextMenuItemTagShowMediaStats’? 1291 | ContextMenuItem ShowMediaStats(CheckableActionType, ContextMenuItemTagShowMediaStats, contextMenuItemTagShowMediaStats()); | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ | ContextMenuItemTagShowMediaStats
Adrian Perez
Comment 2
2022-09-01 12:54:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3925
EWS
Comment 3
2022-09-02 02:23:56 PDT
Committed
254094@main
(6989aa1a1476): <
https://commits.webkit.org/254094@main
> Reviewed commits have been landed. Closing PR #3925 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2022-09-02 02:24:16 PDT
<
rdar://problem/99480443
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug