REGRESSION(253383@main): Build broken with ENABLE(VIDEO) disabled https://bugs.webkit.org/show_bug.cgi?id=244680

Reviewed by Michael Catanzaro.

Sprinkle missing ENABLE(VIDEO) guards where needed.

* Source/WebCore/dom/FragmentDirectiveRangeFinder.cpp:
(WebCore::FragmentDirectiveRangeFinder::isSearchInvisible): Guard usage
of HTMLAudioElement and HTMLVideoElement.
* Source/WebCore/page/ContextMenuController.cpp:
(WebCore::ContextMenuController::addDebuggingItems): Guard addition of
media statistics entry to context menus.

Canonical link: https://commits.webkit.org/254094@main